[project]
name = "2d-geophone-imshow"
version = "0.1.0"
description = "Plot 2D geophone SAC-array coordinates and optional map overlays."
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.0",
    "pillow>=12.2.0",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "psutil>=7.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
